--- a/modules/quickstart/pages/local-quickstart.adoc
+++ b/modules/quickstart/pages/local-quickstart.adoc
@@ -12,7 +12,7 @@
 ifdef::env-github,env-browser[:outfilesuffix:.adoc]
 
 [[quick-start-intro]]
-このクイックスタートでは Dfinity Canister SDK を初めてインストールする方が、スマートコントラクトを {IC} のブロックチェーンに展開するのではなく、ローカルな実行環境に展開し、動作させることを想定しています。
+この _クイックスタート_ では Dfinity Canister SDK を初めてインストールする方が、スマートコントラクトを {IC} のブロックチェーンに展開するのではなく、 *ローカルの実行環境* に展開し、動作させることを想定しています。
 
 まず最初に `+greet+` という関数を1つだけ持つシンプルな Hello Canister を構築し展開してみます。 `+greet+` 関数は1つの引数を受けとり、その結果を **Hello,{nbsp}everyone!** のように返します。コマンドラインでキャニスターを実行した場合はターミナルに、ブラウザで Canister にアクセスした場合は HTML で表示されます。
 
