--- a/modules/quickstart/pages/local-quickstart.adoc
+++ b/modules/quickstart/pages/local-quickstart.adoc
@@ -94,7 +94,7 @@ dfx --help
 プロジェクトはdfx コマンドで作成できます。
 
 このチュートリアルでは、プロジェクトのスターターファイルを使ったアプリケーション作成について説明するために、デフォルトのサンプルアプリケーションの作成から始めます。
-新しいプロジェクトを作成すると、`+dfx+` コマンドラインインターフェイスは、ワークスペースにデフォルトのプロジェクトディレクトリを追加します。プロジェクトディレクトリを構成するテンプレートファイルについては、link:../developers-guide/tutorials/explore-templates{outfilesuffix}[Explore the default project] で説明しています。
+新しいプロジェクトを作成すると、`+dfx+` コマンドラインインターフェイスは、ワークスペースにデフォルトのプロジェクトディレクトリを追加します。プロジェクトディレクトリを構成するテンプレートファイルについては、link:../developers-guide/tutorials/explore-templates{outfilesuffix}[デフォルトプロジェクトの確認] で説明しています。
 
 新しいプロジェクトを作成する手順:
 
