--- a/modules/quickstart/pages/local-quickstart.adoc
+++ b/modules/quickstart/pages/local-quickstart.adoc
@@ -141,7 +141,7 @@ dfx start
 ネットワーク接続を許可するかどうかのプロンプトが表示された場合は、*Allow* をクリックします。
 . Canister の実行が表示されているターミナルを開いたままにして、最初のターミナルにフォーカスを切り替えます。
 +
-残りの手順は、キャニスターの実行操作が表示されていないこちらのターミナルで行います。
+残りの手順は、Canister の実行操作が表示されていないこちらのターミナルで行います。
 
 [[register-ids]]
 == アプリケーションの登録と構築、展開
