--- a/modules/quickstart/pages/local-quickstart.adoc
+++ b/modules/quickstart/pages/local-quickstart.adoc
@@ -207,7 +207,7 @@ Deployed canisters.
 Cycle ウォレットは特別なタイプの Canister で、link:../developers-guide/concepts/tokens-cycles{outfilesuffix}[Cycle] を他の Canister に転送することができます。
 
 +
-このサンプルアプリケーションをローカルにデプロイするためには、デフォルトの開発者アイデンティティ、サイクルウォレットの使用、サイクルの管理などについて特に知る必要はありません。これらのトピックについては後ほど説明しますが、今のところ、これらが自動的に作成されることを覚えておいてください。
+このサンプルアプリケーションをローカルにデプロイするためには、デフォルトの開発者アイデンティティ、Cycle ウォレットの使用、Cycle の管理などについて特に知る必要はありません。これらのトピックについては後ほど説明しますが、今のところ、これらが自動的に作成されることを覚えておいてください。
 . 以下のコマンドを実行して、 `+hello+` キャニスターと定義済みの `+greet+` 関数を呼び出します。
 +
 [source,bash]
