--- a/modules/quickstart/pages/quickstart-intro.adoc
+++ b/modules/quickstart/pages/quickstart-intro.adoc
@@ -8,7 +8,7 @@ ifdef::env-github,env-browser[:outfilesuffix:.adoc]
 
 [[quick-start-intro]]
 この {sdk-long-name} は、Canister スマートコントラクトのアプリケーションを作成し、{IC} ブロックチェーンのメインネットにデプロイするためのツール、サンプルコード、ドキュメントを提供しています。
-_クイックスタート_ チュートリアルでは、{sdk-short-name} を初めてインストールする方のために、最初のアプリケーションを作成、構築、展開する方法を説明します。
+_クイックスタート_ チュートリアルでは、{sdk-short-name} を初めてインストールする方のために、最初のアプリケーションを作成、ビルド、デプロイする方法を説明します。
 
 説明をシンプルにして作業に集中できるように、 _クイックスタート_ は2つのシナリオに分かれています。
 
