--- a/modules/quickstart/pages/quickstart-intro.adoc
+++ b/modules/quickstart/pages/quickstart-intro.adoc
@@ -12,7 +12,7 @@ _クイックスタート_ チュートリアルでは、{sdk-short-name} を初
 
 説明をシンプルにして作業に集中できるように、 _クイックスタート_ は2つのシナリオに分かれています。
 
-* link:local-quickstart{outfilesuffix}[ローカル環境での開発] シナリオでは、 _ローカルの Canister 実行環境_ でサンプルアプリケーションを作成して展開します。
+* link:local-quickstart{outfilesuffix}[ローカル環境での開発] シナリオでは、 _ローカルの Canister 実行環境_ でサンプルアプリケーションを作成してデプロイします。
 
 * link:network-quickstart{outfilesuffix}[オンチェーンへの展開] シナリオでは、ローカルでサンプルアプリケーションを作成しますが、独立したデータセンターのノードマシン上で稼働している _{platform} に接続_ し、そこにアプリケーションを展開します。
 
