--- a/modules/quickstart/pages/quickstart-intro.adoc
+++ b/modules/quickstart/pages/quickstart-intro.adoc
@@ -14,7 +14,7 @@ _クイックスタート_ チュートリアルでは、{sdk-short-name} を初
 
 * link:local-quickstart{outfilesuffix}[ローカル環境での開発] シナリオでは、 _ローカルの Canister 実行環境_ でサンプルアプリケーションを作成してデプロイします。
 
-* link:network-quickstart{outfilesuffix}[オンチェーンへの展開] シナリオでは、ローカルでサンプルアプリケーションを作成しますが、独立したデータセンターのノードマシン上で稼働している _{platform} に接続_ し、そこにアプリケーションを展開します。
+* link:network-quickstart{outfilesuffix}[オンチェーンへのデプロイ] シナリオでは、ローカルでサンプルアプリケーションを作成しますが、独立したデータセンターのノードマシン上で稼働している _{platform} に接続_ し、そこにアプリケーションをデプロイします。
 
 開発環境のセットアップにヘルプが必要な場合、例えば、新しいターミナルの開き方、パッケージのインストール方法、フォルダの作成やディレクトリ間の移動方法などがわからない場合は、link:newcomers{outfilesuffix}[初めての方の為の予備知識]から始めるとよいでしょう。
 
