--- a/modules/quickstart/pages/quickstart-intro.adoc
+++ b/modules/quickstart/pages/quickstart-intro.adoc
@@ -19,7 +19,7 @@ _クイックスタート_ チュートリアルでは、{sdk-short-name} を初
 開発環境のセットアップにヘルプが必要な場合、例えば、新しいターミナルの開き方、パッケージのインストール方法、フォルダの作成やディレクトリ間の移動方法などがわからない場合は、link:newcomers{outfilesuffix}[初めての方の為の予備知識]から始めるとよいでしょう。
 
 [[default-app]]
-== デフォルトのアプリケーション
+== デフォルトの Dapp
 
 どちらのシナリオでも、シンプルな Hello Canister のスマートコントラクトを構築して展開しますが、このスマートコントラクトには `+greet+` という関数が1つだけ存在します。この `+greet+` 関数は1つのテキスト引数を受け入れ、その結果として **Hello,{nbsp}everyone!** のような挨拶を返します。コマンドラインで Canister を実行した場合はターミナルに、ブラウザでアプリケーションにアクセスした場合はポップアップウィンドウに表示されます。
 
