--- a/modules/quickstart/pages/quickstart-intro.adoc
+++ b/modules/quickstart/pages/quickstart-intro.adoc
@@ -21,7 +21,7 @@ _クイックスタート_ チュートリアルでは、{sdk-short-name} を初
 [[default-app]]
 == デフォルトの Dapp
 
-どちらのシナリオでも、シンプルな Hello Canister のスマートコントラクトを構築して展開しますが、このスマートコントラクトには `+greet+` という関数が1つだけ存在します。この `+greet+` 関数は1つのテキスト引数を受け入れ、その結果として **Hello,{nbsp}everyone!** のような挨拶を返します。コマンドラインで Canister を実行した場合はターミナルに、ブラウザでアプリケーションにアクセスした場合はポップアップウィンドウに表示されます。
+どちらのシナリオでも、シンプルな Hello Canister のスマートコントラクトを構築してデプロイしますが、このスマートコントラクトには `+greet+` という関数が1つだけ存在します。この `+greet+` 関数は1つのテキスト引数を受け入れ、その結果として **Hello,{nbsp}everyone!** のような挨拶を返します。コマンドラインで Canister を実行した場合はターミナルに、ブラウザでアプリケーションにアクセスした場合はポップアップウィンドウに表示されます。
 
 デフォルトのアプリケーションは、{IC} 向けに特別に設計されたプログラミング言語である {proglang} で書かれたバックエンドコードと、シンプルな Webpack ベースのフロントエンドで構成されています。
 
