--- a/modules/quickstart/pages/quickstart-intro.adoc
+++ b/modules/quickstart/pages/quickstart-intro.adoc
@@ -35,7 +35,7 @@ link:../developers-guide/concepts/tokens-cycles{outfilesuffix}[トークンと C
 * そのようなサービスを提供しているプロバイダーにアカウントや link:../developers-guide/default-wallet{outfilesuffix}#wallet-create-wallets[Cycle ウォレット]を登録して、Cycle を取得します。
 * 他の開発者と連携し、Cycle ウォレットや Canister を使って Canister 間で Cycle を直接 link:../developers-guide/default-wallet{outfilesuffix}#wallet-send[送信]または link:../developers-guide/default-wallet{outfilesuffix}#wallet-receive[受信]します。
 
-Cycle を必要とし消費するのは Canister だけであり、それらはオペレーションやリソースの支払いのために使用されます。サイクルは通常、Canister 同士でやり取りされ、ユーザーや開発者には転送されません。ただし、Cycle を配布したりする際には、自分用に作成された Cycle ウォレットや同様のアプリケーションで Cycle を管理することができます。
+Cycle を必要とし消費するのは Canister だけであり、それらはオペレーションやリソースの支払いのために使用されます。Cycle は通常、Canister 同士でやり取りされ、ユーザーや開発者には転送されません。ただし、Cycle を配布したりする際には、自分用に作成された Cycle ウォレットや同様のアプリケーションで Cycle を管理することができます。
 
 
 == もっと学びたいですか？
