--- a/modules/developers-guide/pages/webpack-config.adoc
+++ b/modules/developers-guide/pages/webpack-config.adoc
@@ -1,20 +1,20 @@
 = Front-end Overview
 
-{platform} では、私たちの https://www.npmjs.com/package/@dfinity/agent[JavaScript agent] を使って、あなたの dapps のために Web 3.0 のフロントエンドをホストすることができます。また、`+dfx+` が提供する https://github.com/dfinity/certified-assets[asset canister] を使って静的ファイルを {IC} にアップロードすることで、アプリケーション全体を分散型技術で実行することができます。このセクションでは、`+dfx new+` で提供されるデフォルトのフロントエンドテンプレート、フロントエンドの設定オプション、プロジェクトのユーザーインターフェイスを構築するための他のフレームワークの使用について詳しく説明します。
+Internet Computer blockchain では、私たちの https://www.npmjs.com/package/@dfinity/agent[JavaScript agent] を使って、あなたの dapps のために Web 3.0 のフロントエンドをホストすることができます。また、`+dfx+` が提供する https://github.com/dfinity/certified-assets[asset canister] を使って静的ファイルを {IC} にアップロードすることで、アプリケーション全体を分散型技術で実行することができます。このセクションでは、`+dfx new+` で提供されるデフォルトのフロントエンドテンプレート、フロントエンドの設定オプション、プロジェクトのユーザーインターフェイスを構築するための他のフレームワークの使用について詳しく説明します。
 
 ここではフロントエンドDAPの開発の様々な段階でのサンプルコードを含むチュートリアルへのクイックリンクをご紹介します。
 
-* React dapp構築のチュートリアル link:tutorials/custom-frontend{outfilesuffix}[フロントエンドをカスタマイズする］
-* link:tutorials/hello-location{outfilesuffix}#candid-ui[Candid]を、キャニスター内の機能を公開してテストするための最低限のインターフェースとして使用する。
-* link:tutorials/explore-templates{outfilesuffix}#default-frontend[raw HTML and JavaScript]を使って、シンプルなHTMLエントリーページを表示しています。
-* link:tutorials/custom-frontend{outfilesuffix}[ReactとコンパイルされたJavaScript]を使って、HTMLの属性や要素を直接ページに埋め込みます。
-* link:tutorials/my-contacts{outfilesuffix}[ReactとTypeScript]を使って、外部ファイルからCSSプロパティをインポートする。
+* React dapp構築のチュートリアル https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/custom-frontend.adoc[フロントエンドをカスタマイズする］
+* https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/hello-location.adoc#candid-ui[Candid]を、キャニスター内の機能を公開してテストするための最低限のインターフェースとして使用する。
+* https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/explore-templates.adoc#default-frontend[raw HTML and JavaScript]を使って、シンプルなHTMLエントリーページを表示しています。
+* https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/custom-frontend.adoc[ReactとコンパイルされたJavaScript]を使って、HTMLの属性や要素を直接ページに埋め込みます。
+* https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/my-contacts.adoc[ReactとTypeScript]を使って、外部ファイルからCSSプロパティをインポートする。
 
 == デフォルトテンプレートの使用方法
 
 チュートリアルでお気づきのように、プロジェクトにはテンプレートの `index.js` と `+webpack.config.js+` ファイルが含まれています。
 
-デフォルトでは、`+index.js+`ファイルは、`+src/declarations+` フォルダにあるエージェントをインポートします。このディレクトリは、`dfx deploy` を実行したときに、ローカルまたはICにデプロイするときに、`+dfx+` によって生成されます。
+デフォルトでは、`+index.js+` ファイルは、`+src/declarations+` フォルダにあるエージェントをインポートします。このディレクトリは、`dfx deploy` を実行したときに、ローカルまたはICにデプロイするときに、`+dfx+` によって生成されます。
 
 その生成されたコードは以下のようになります。
 
@@ -75,7 +75,7 @@ document.getElementById("clickMeBtn").addEventListener("click", async () => {
 
 webpack は、JavaScript ベースのアプリケーション用のモジュールバンドルラーとして人気があり、高度な設定が可能であるため、新しいプロジェクトでは、デフォルトの `+webpack.config.js+` ファイルが作成され、使用したい特定のモジュール（`react` や `markdown` など）を簡単に追加できるようになっています。
 
-テンプレートの`+webpack.config.js` ファイルのコードを確認すると、ローカル開発の場合は `.dfx/local/canister_ids.json` から、その他の環境を設定した場合は `./canister_ids.json` からキャニスターIDを推定しています。どのネットワークを使用するかは、プロセス変数の `DFX_NETWORK` や、`NODE_ENV` が `"production"` に設定されているかどうかに基づいて決定されます。
+テンプレートの `+webpack.config.js` ファイルのコードを確認すると、ローカル開発の場合は `.dfx/local/canister_ids.json` から、その他の環境を設定した場合は `./canister_ids.json` からキャニスターIDを推定しています。どのネットワークを使用するかは、プロセス変数の `DFX_NETWORK` や、`NODE_ENV` が `"production"` に設定されているかどうかに基づいて決定されます。
 
 これらの手順は以下のコードブロックで見ることができます。
 
@@ -129,7 +129,7 @@ initCanisterIds();
 }
 ----
 
-ビルドスクリプトの実行に`+dfx+`を使用しないアプリケーションの場合は、自分で変数を用意することができます。例えば、以下のようになります。
+ビルドスクリプトの実行に `+dfx+` を使用しないアプリケーションの場合は、自分で変数を用意することができます。例えば、以下のようになります。
 
 [source,bash]
 ----
@@ -148,13 +148,13 @@ DFX_NETWORK=staging NODE_ENV=production HELLO_CANISTER_ID=rrkah... npm run build
 dfx build hello
 ....
 
-* デフォルトのwebpack構成を使用していて、`+dfx build+` の実行に失敗する場合は、プロジェクトディレクトリで`+npm install+`を実行してから、`+dfx build+` を再実行してください。
+* デフォルトのwebpack構成を使用していて、`+dfx build+` の実行に失敗する場合は、プロジェクトディレクトリで `+npm install+` を実行してから、`+dfx build+` を再実行してください。
 * プロジェクトディレクトリで `+npm install+` を実行しても問題が解決しない場合は、`+webpack.config.js+` ファイルの設定にシンタックスエラーがないか確認してください。
 // end::node[]   
 
 == 他のモジュールをReactフレームワークで使用する
 
-link:https://github.com/dfinity/examples[examples]リポジトリにあるいくつかのチュートリアルやサンプルプロジェクトでは、`+npm install+`コマンドを使ってReactモジュールを追加する方法が説明されています。
+link:https://github.com/dfinity/examples[examples]リポジトリにあるいくつかのチュートリアルやサンプルプロジェクトでは、`+npm install+` コマンドを使ってReactモジュールを追加する方法が説明されています。
 これらのモジュールを使って、プロジェクトで使用したいユーザーインターフェースコンポーネントを構築することができます。
 例えば、以下のコマンドを実行して、`+react-router+` モジュールをインストールすることができます。
 
@@ -205,7 +205,7 @@ npm start
 ----
 . Webブラウザーを開き、8080ポートを使用して、アプリケーションのアセットキャニスターにナビゲートします。
 +
-For example:
+例:
 +
 ....
 http://localhost:8080
@@ -236,7 +236,7 @@ function addElement () {
   document.body.insertBefore(newDiv, currentDiv);
 }
 ----
-. index.js "ファイルへの変更を保存しますが、エディタを開いたままにしておき、変更を続けます。
+. `+index.js+` ファイルへの変更を保存しますが、エディタを開いたままにしておき、変更を続けます。
 . ブラウザを更新するか、またはブラウザが自動的に更新されるのを待つと、変更内容が表示されます。
 +
 プロジェクトのフロントエンドの作業が終わったら、Control-Cを押してwebpack開発サーバーを停止することができます。
@@ -244,12 +244,12 @@ function addElement () {
 
 == 他のフレームワークを使うと
 
-webpack以外のbundlerを使いたい場合もあるでしょう。バンドルラーごとの説明はまだ準備できていませんが、お使いのバンドラーに精通していれば、以下の手順で作業を進めることができます。
+webpack以外のbundlerを使いたい場合もあるでしょう。bundlerごとの説明はまだ準備できていませんが、お使いのバンドラーに精通していれば、以下の手順で作業を進めることができます。
 
 . `+package.json+` から `+copy:types+`, `+prestart+`, `+prebuild+` のスクリプトを削除します。
-. dfx deploy+` を実行して、キャニスター用のローカルバインディングを生成します。
+. `+dfx deploy+` を実行して、キャニスター用のローカルバインディングを生成します。
 . 生成されたバインディングを保存したいディレクトリにコピーします。
-. declarations/<canister_name>/index.js+` を修正し、`+process.env.<CANISTER_NAME>_CANISTER_ID+` をバンドルラーの環境変数に相当するパターンに置き換えます。
+. `+declarations/<canister_name>/index.js+` を修正し、`+process.env.<CANISTER_NAME>_CANISTER_ID+` をバンドラーの環境変数に相当するパターンに置き換えます。
   * 望ましいワークフローであれば、キャニスターIDをハードコードすることもできます。
 . 宣言をコミットして、コードベースにインポートします。
 
