--- a/modules/developers-guide/pages/webpack-config.adoc
+++ b/modules/developers-guide/pages/webpack-config.adoc
@@ -1,13 +1,13 @@
-= Front-end Overview
+= フロントエンドの概要
 
-Internet Computer blockchain では、私たちの https://www.npmjs.com/package/@dfinity/agent[JavaScript agent] を使って、あなたの dapps のために Web 3.0 のフロントエンドをホストすることができます。また、`+dfx+` が提供する https://github.com/dfinity/certified-assets[asset canister] を使って静的ファイルを Internet Computer にアップロードすることで、アプリケーション全体を分散型技術で実行することができます。このセクションでは、`+dfx new+` で提供されるデフォルトのフロントエンドテンプレート、フロントエンドの設定オプション、プロジェクトのユーザーインターフェイスを構築するための他のフレームワークの使用について詳しく説明します。
+{platform} では、私たちの https://www.npmjs.com/package/@dfinity/agent[JavaScript agent] を使って、あなたの dapps のために Web 3.0 のフロントエンドをホストすることができます。また、`+dfx+` が提供する https://github.com/dfinity/certified-assets[asset canister] を使って静的ファイルを {IC} にアップロードすることで、アプリケーション全体を分散型技術で実行することができます。このセクションでは、`+dfx new+` で提供されるデフォルトのフロントエンドテンプレート、フロントエンドの設定オプション、プロジェクトのユーザーインターフェイスを構築するための他のフレームワークの使用について詳しく説明します。
 
-ここではフロントエンドDAPの開発の様々な段階でのサンプルコードを含むチュートリアルへのクイックリンクをご紹介します。
+ここではフロントエンド Dapps の開発の様々な段階でのサンプルコードを含むチュートリアルへのクイックリンクをご紹介します。
 
 * React dapp構築のチュートリアル https://nifty-beaver-611cb8.netlify.app/docs/developers-guide/tutorials/custom-frontend.html[フロントエンドをカスタマイズする]
-* https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/hello-location.adoc#candid-ui[Candid]を、キャニスター内の機能を公開してテストするための最低限のインターフェースとして使用する。
-* https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/explore-templates.adoc#default-frontend[raw HTML and JavaScript]を使って、シンプルなHTMLエントリーページを表示しています。
-* https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/custom-frontend.adoc[ReactとコンパイルされたJavaScript]を使って、HTMLの属性や要素を直接ページに埋め込みます。
+* https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/hello-location.adoc#candid-ui[Candid]を、Canister 内の機能を公開してテストするための最低限のインターフェースとして使用する。
+* https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/explore-templates.adoc#default-frontend[生の HTML と JavaScript]を使って、シンプルな HTML エントリーページを表示する。
+* https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/custom-frontend.adoc[React とコンパイルされた JavaScript]を使って、HTML の属性や要素を直接ページに埋め込む。
 * https://github.com/Japan-DfinityInfoHub/docs/blob/main/modules/developers-guide/pages/tutorials/my-contacts.adoc[ReactとTypeScript]を使って、外部ファイルからCSSプロパティをインポートする。
 
 == デフォルトテンプレートの使用方法
@@ -75,7 +75,7 @@ document.getElementById("clickMeBtn").addEventListener("click", async () => {
 
 webpack は、JavaScript ベースのアプリケーション用のモジュールバンドラーとして人気があり、高度な設定が可能であるため、新しいプロジェクトでは、デフォルトの `+webpack.config.js+` ファイルが作成され、使用したい特定のモジュール（`react` や `markdown` など）を簡単に追加できるようになっています。
 
-テンプレートの `+webpack.config.js+` ファイルのコードを確認すると、ローカル開発の場合は `.dfx/local/canister_ids.json` から、その他の環境を設定した場合は `./canister_ids.json` からキャニスターIDを推定しています。どのネットワークを使用するかは、プロセス変数の `DFX_NETWORK` や、`NODE_ENV` が `"production"` に設定されているかどうかに基づいて決定されます。
+テンプレートの `+webpack.config.js+` ファイルのコードを確認すると、ローカル開発の場合は `.dfx/local/canister_ids.json` から、その他の環境を設定した場合は `./canister_ids.json` から Canister ID を推定しています。どのネットワークを使用するかは、プロセス変数の `DFX_NETWORK` や、`NODE_ENV` が `"production"` に設定されているかどうかに基づいて決定されます。
 
 これらの手順は以下のコードブロックで見ることができます。
 
@@ -115,7 +115,7 @@ initCanisterIds();
 多くの場合、デフォルトの `+webpack.config.js+` ファイルをそのまま、何も変更せずに使用することもできますし、プラグインやモジュール、その他のカスタム構成を追加して、ニーズに合わせて使用することもできます。
 具体的に `+webpack.config.js+` の設定をどのように変更するかは、使用したい他のツールやフレームワークに大きく依存します。
 
-例えば、フロントエンドのチュートリアルである https://nifty-beaver-611cb8.netlify.app/docs/developers-guide/tutorials/custom-frontend.html[Customize the front-end] や https://nifty-beaver-611cb8.netlify.app/docs/developers-guide/tutorials/my-contacts.html[Add a stylesheet] を試したことがある方は、React JavaScript で動作するように以下の部分を変更しているかもしれません。
+例えば、フロントエンドのチュートリアルである https://nifty-beaver-611cb8.netlify.app/docs/developers-guide/tutorials/custom-frontend.html[フロントエンドのカスタマイズ] や https://nifty-beaver-611cb8.netlify.app/docs/developers-guide/tutorials/my-contacts.html[スタイルシートの追加] を試したことがある方は、React JavaScript で動作するように以下の部分を変更しているかもしれません。
 
 [source,js]
 ----
@@ -142,13 +142,13 @@ DFX_NETWORK=staging NODE_ENV=production HELLO_CANISTER_ID=rrkah... npm run build
 
 プロジェクトは、デフォルトのフロントエンドのフレームワークを提供するためにwebpackに依存しているので、開発環境に `+node.js+` がインストールされ、プロジェクトディレクトリにアクセスできる必要があります。
 
-* デフォルトの webpack 設定とキャニスターのエイリアスを使用せずにプロジェクトを開発したい場合は、`+dfx.json+` ファイルから `+assets+` キャニスターを削除するか、特定のキャニスター名を使用してプロジェクトをビルドすることができます。例えば、以下のコマンドを実行すると、フロントエンドのアセットを使わずにhelloプログラムだけをビルドすることができます。
+* デフォルトの webpack 設定と Canister のエイリアスを使用せずにプロジェクトを開発したい場合は、`+dfx.json+` ファイルから `+assets+` Canister を削除するか、特定の Canister 名を使用してプロジェクトをビルドすることができます。例えば、以下のコマンドを実行すると、フロントエンドのアセットを使わずに hello プログラムだけをビルドすることができます。
 +
 ....
 dfx build hello
 ....
 
-* デフォルトのwebpack構成を使用していて、`+dfx build+` の実行に失敗する場合は、プロジェクトディレクトリで `+npm install+` を実行してから、`+dfx build+` を再実行してください。
+* デフォルトの webpack 構成を使用していて、`+dfx build+` の実行に失敗する場合は、プロジェクトディレクトリで `+npm install+` を実行してから、`+dfx build+` を再実行してください。
 * プロジェクトディレクトリで `+npm install+` を実行しても問題が解決しない場合は、`+webpack.config.js+` ファイルの設定にシンタックスエラーがないか確認してください。
 // end::node[]   
 
@@ -228,7 +228,7 @@ function addElement () {
   // それに乗せるコンテント
   const newContent = document.createTextNode("Test live page reloading!");
 
-  // anweDiv要素のnewContentを追加
+  // 新しく作成された div 要素に テキストノードである newContent を追加
   newDiv.appendChild(newContent);
 
   // 新しく作成したnewDiv要素とnewContentをDOMに追加
