--- a/modules/samples/pages/hello.adoc
+++ b/modules/samples/pages/hello.adoc
@@ -1,6 +1,6 @@
 # Hello, World!
 
-このサンプルは、2つの Caninster スマートコントラクトからなるごく単純な Dapp です。
+このサンプルは、以下の 2つの Canister スマートコントラクトからなるごく単純な Dapp です。
 
 * シンプルなバックエンド Canister ``hello`` で、アプリケーションのロジックを実装しています。 
 と
