--- a/modules/samples/pages/hello.adoc
+++ b/modules/samples/pages/hello.adoc
@@ -2,7 +2,7 @@
 
 このサンプルは、以下の 2つの Canister スマートコントラクトからなるごく単純な Dapp です。
 
-* シンプルなバックエンド Canister ``hello`` で、アプリケーションのロジックを実装しています。 
+* アプリケーションのロジックを実装しているシンプルなバックエンド Canister である ``hello``
 と
 * シンプルなフロントエンドアセット Caninster である ``hello_assets`` は、Dapp の Web ユーザーインターフェースのアセットを提供します。
 
